# Synthetic-Data

./: .gitignore  README.md  generate_outlines.py  generate_textbooks.py  generate_titles.py  pyproject.toml
synthetic_data/: settings.py  util.py
synthetic_data/embeddings/: embeddings.py
synthetic_data/examples/: outlines.json  titles.json
synthetic_data/llm/: llm.py  parameters.py  prompt.py
synthetic_data/templates/: outline.jinja  title.jinja
synthetic_data/writers/: outline.py  title.py
